# bus-sign

./: .envrc  .gitignore  biome.json  devenv.nix  devenv.yaml  flake.nix
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: Cargo.nix  Cargo.toml
backend/src/: main.rs
frontend/: bun.nix  package-lock.json  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: BusTimeEntry.svelte  Maintenance.svelte
